Update and rename en_us.json to fr_fr.json
Partial translation to french

--- a/src/main/resources/assets/forbidden_arcanus/lang/fr_fr.json
+++ b/src/main/resources/assets/forbidden_arcanus/lang/fr_fr.json
@@ -1,76 +1,76 @@
 {
-    "_comment": "Item Groups",
+    "_comment": "Groupe des objets",
     "itemGroup.forbidden_arcanus": "Forbidden & Arcanus",
 
-    "__comment": "Effects",
-    "effect.forbidden_arcanus.spectral_vision": "Spectral Vision",
-    "effect.forbidden_arcanus.darkened": "Darkened",
+    "__comment": "Effets",
+    "effect.forbidden_arcanus.spectral_vision": "Vison spectrale",
+    "effect.forbidden_arcanus.darkened": "Asombri",
 
-    "category_blocks": "Blocks",
-    "block.forbidden_arcanus.darkstone": "Darkstone",
-    "block.forbidden_arcanus.arcane_chiseled_darkstone": "Arcane Chiseled Darkstone",
-    "block.forbidden_arcanus.darkstone_slab": "Darkstone Slab",
-    "block.forbidden_arcanus.darkstone_stairs": "Darkstone Stairs",
-    "block.forbidden_arcanus.darkstone_wall": "Darkstone Wall",
-    "block.forbidden_arcanus.arcane_gilded_darkstone": "Arcane Gilded Darkstone",
-    "block.forbidden_arcanus.polished_darkstone": "Polished Darkstone",
-    "block.forbidden_arcanus.polished_darkstone_slab": "Polished Darkstone Slab",
-    "block.forbidden_arcanus.polished_darkstone_stairs": "Polished Darkstone Stairs",
-    "block.forbidden_arcanus.polished_darkstone_wall": "Polished Darkstone Wall",
-    "block.forbidden_arcanus.polished_darkstone_pressure_plate": "Polished Darkstone Pressure Plate",
-    "block.forbidden_arcanus.polished_darkstone_button": "Polished Darkstone Button",
-    "block.forbidden_arcanus.chiseled_polished_darkstone": "Chiseled Polished Darkstone",
-    "block.forbidden_arcanus.runic_chiseled_polished_darkstone": "Runic Chiseled Polished Darkstone",
-    "block.forbidden_arcanus.arcane_chiseled_polished_darkstone": "Arcane Chiseled Polished Darkstone",
-    "block.forbidden_arcanus.polished_darkstone_bricks": "Polished Darkstone Bricks",
-    "block.forbidden_arcanus.polished_darkstone_brick_slab": "Polished Darkstone Brick Slab",
-    "block.forbidden_arcanus.polished_darkstone_brick_stairs": "Polished Darkstone Brick Stairs",
-    "block.forbidden_arcanus.polished_darkstone_brick_wall": "Polished Darkstone Brick Wall",
-    "block.forbidden_arcanus.cracked_polished_darkstone_bricks": "Cracked Polished Darkstone Bricks",
-    "block.forbidden_arcanus.tiled_polished_darkstone_bricks": "Tiled Polished Darkstone Bricks",
-    "block.forbidden_arcanus.arcane_polished_darkstone": "Arcane Polished Darkstone",
-    "block.forbidden_arcanus.arcane_polished_darkstone_slab": "Arcane Polished Darkstone Slab",
-    "block.forbidden_arcanus.arcane_polished_darkstone_stairs": "Arcane Polished Darkstone Stairs",
-    "block.forbidden_arcanus.arcane_polished_darkstone_wall": "Arcane Polished Darkstone Wall",
-    "block.forbidden_arcanus.chiseled_arcane_polished_darkstone": "Chiseled Arcane Polished Darkstone",
-    "block.forbidden_arcanus.arcane_polished_darkstone_pillar": "Arcane Polished Darkstone Pillar",
-    "block.forbidden_arcanus.arcane_polished_darkstone_rod": "Arcane Polished Darkstone Rod",
+    "category_blocks": "Blocs",
+    "block.forbidden_arcanus.darkstone": "Sombrepierre",
+    "block.forbidden_arcanus.arcane_chiseled_darkstone": "Sombrepierre arcanique ciselé",
+    "block.forbidden_arcanus.darkstone_slab": "Dalle de Sombrepierre",
+    "block.forbidden_arcanus.darkstone_stairs": "Escaliers de Sombrepierre",
+    "block.forbidden_arcanus.darkstone_wall": "Muret de Sombrepierre",
+    "block.forbidden_arcanus.arcane_gilded_darkstone": "Sombrepierre arcanique dorée",
+    "block.forbidden_arcanus.polished_darkstone": "Sombrepierre polie",
+    "block.forbidden_arcanus.polished_darkstone_slab": "Dalle de Sombrepierre polie",
+    "block.forbidden_arcanus.polished_darkstone_stairs": "Escaliers de Sombrepierre polie",
+    "block.forbidden_arcanus.polished_darkstone_wall": "Muret de Sombrepierre polie",
+    "block.forbidden_arcanus.polished_darkstone_pressure_plate": "Plaque de pression en Sombrepierre polie",
+    "block.forbidden_arcanus.polished_darkstone_button": "Boutton en Sombrepierre polie",
+    "block.forbidden_arcanus.chiseled_polished_darkstone": "Sombrepierre ciselé et polie",
+    "block.forbidden_arcanus.runic_chiseled_polished_darkstone": "Sombrepierre runique ciselé et polie",
+    "block.forbidden_arcanus.arcane_chiseled_polished_darkstone": "Sombrepierre arcanique ciselé et polie",
+    "block.forbidden_arcanus.polished_darkstone_bricks": "Briques de Sombrepierre polie",
+    "block.forbidden_arcanus.polished_darkstone_brick_slab": "Dalle en briques de Sombrepierre polie",
+    "block.forbidden_arcanus.polished_darkstone_brick_stairs": "Escaliers en briques de Sombrepierre polie",
+    "block.forbidden_arcanus.polished_darkstone_brick_wall": "Muret en briques de Sombrepierre polie",
+    "block.forbidden_arcanus.cracked_polished_darkstone_bricks": "Briques craquelées de Sombrepierre polie",
+    "block.forbidden_arcanus.tiled_polished_darkstone_bricks": "Briques carerelés de Sombrepierre polie",
+    "block.forbidden_arcanus.arcane_polished_darkstone": "Sombrepierre arcanique polie",
+    "block.forbidden_arcanus.arcane_polished_darkstone_slab": "Dalle de Sombrepierre arcanique polie",
+    "block.forbidden_arcanus.arcane_polished_darkstone_stairs": "Escaliers de Sombrepierre arcanique polie",
+    "block.forbidden_arcanus.arcane_polished_darkstone_wall": "Muret de Sombrepierre polie",
+    "block.forbidden_arcanus.chiseled_arcane_polished_darkstone": "Sombrepierre arcanique ciselé et polie",
+    "block.forbidden_arcanus.arcane_polished_darkstone_pillar": "Pillier en Sombrepierre arcanique ciselé et polie",
+    "block.forbidden_arcanus.arcane_polished_darkstone_rod": "Barre en Sombrepierre arcanique polie",
 
-    "block.forbidden_arcanus.darkstone_pedestal": "Darkstone Pedestal",
-    "block.forbidden_arcanus.arcane_darkstone_pedestal": "Arcane Darkstone Pedestal",
-    "block.forbidden_arcanus.clibano_core": "Clibano Core",
-    "block.forbidden_arcanus.clibano_multiblock": "Clibano Multiblock",
+    "block.forbidden_arcanus.darkstone_pedestal": "Piédestal en Sombrepierre",
+    "block.forbidden_arcanus.arcane_darkstone_pedestal": "Piédestal en Sombrepierre arcanique",
+    "block.forbidden_arcanus.clibano_core": "Coeur de Clibano",
+    "block.forbidden_arcanus.clibano_multiblock": "Clibano multiblocs",
 
     "block.forbidden_arcanus.stella_arcanum": "Stella Arcanum",
-    "block.forbidden_arcanus.xpetrified_ore": "Xpetrified Ore",
-    "block.forbidden_arcanus.arcane_crystal_ore": "Arcane Crystal Ore",
-    "block.forbidden_arcanus.deepslate_arcane_crystal_ore": "Deepslate Arcane Crystal Ore",
-    "block.forbidden_arcanus.runic_stone": "Runic Stone",
-    "block.forbidden_arcanus.runic_deepslate": "Runic Deepslate",
-    "block.forbidden_arcanus.runic_darkstone": "Runic Darkstone",
-    "block.forbidden_arcanus.dark_nether_star_block": "Dark Nether Star Block",
+    "block.forbidden_arcanus.xpetrified_ore": "Minerai Xpétrifié",
+    "block.forbidden_arcanus.arcane_crystal_ore": "Minerai de cristal arcanique",
+    "block.forbidden_arcanus.deepslate_arcane_crystal_ore": "Minerai de cristal arcanique des abimes",
+    "block.forbidden_arcanus.runic_stone": "Pierre runique",
+    "block.forbidden_arcanus.runic_deepslate": "Ardoise runique des abîmes",
+    "block.forbidden_arcanus.runic_darkstone": "Sombrepierre runique",
+    "block.forbidden_arcanus.dark_nether_star_block": "Bloc d'étoile sombre du Nether",
     "block.forbidden_arcanus.processed_obsidian_block": "Processed Obsidian Block",
-    "block.forbidden_arcanus.arcane_gold_block": "Arcane Gold Block",
-    "block.forbidden_arcanus.stellarite_block": "Stellarite Block",
-    "block.forbidden_arcanus.arcane_crystal_block": "Arcane Crystal Block",
-    "block.forbidden_arcanus.rune_block": "Rune Block",
-    "block.forbidden_arcanus.dark_rune_block": "Dark Rune Block",
-    "block.forbidden_arcanus.arcane_golden_glass": "Arcane Golden Glass",
-    "block.forbidden_arcanus.runic_glass": "Runic Glass",
-    "block.forbidden_arcanus.dark_runic_glass": "Dark Runic Glass",
-    "block.forbidden_arcanus.arcane_golden_glass_pane": "Arcane Golden Glass Pane",
-    "block.forbidden_arcanus.runic_glass_pane": "Runic Glass Pane",
-    "block.forbidden_arcanus.dark_runic_glass_pane": "Dark Runic Glass Pane",
-    "block.forbidden_arcanus.soulless_sand": "Soulless Sand",
-    "block.forbidden_arcanus.soulless_sandstone": "Soulless Sandstone",
-    "block.forbidden_arcanus.polished_soulless_sandstone": "Polished Soulless Sandstone",
-    "block.forbidden_arcanus.cut_soulless_sandstone": "Cut Soulless Sandstone",
-    "block.forbidden_arcanus.soulless_sandstone_slab": "Soulless Sandstone Slab",
-    "block.forbidden_arcanus.cut_soulless_sandstone_slab": "Cut Soulless Sandstone Slab",
-    "block.forbidden_arcanus.polished_soulless_sandstone_slab": "Polished Soulless Sandstone Slab",
-    "block.forbidden_arcanus.soulless_sandstone_stairs": "Soulless Sandstone Stairs",
-    "block.forbidden_arcanus.polished_soulless_sandstone_stairs": "Polished Soulless Sandstone Stairs",
-    "block.forbidden_arcanus.soulless_sandstone_wall": "Soulless Sandstone Wall",
+    "block.forbidden_arcanus.arcane_gold_block": "Bloc d'or runique",
+    "block.forbidden_arcanus.stellarite_block": "Bloc de stellarite",
+    "block.forbidden_arcanus.arcane_crystal_block": "Bloc de cristal arcanique",
+    "block.forbidden_arcanus.rune_block": "Bloc de runes",
+    "block.forbidden_arcanus.dark_rune_block": "Bloc de runes sombres",
+    "block.forbidden_arcanus.arcane_golden_glass": "Verre dorré arcanique",
+    "block.forbidden_arcanus.runic_glass": "Verre runique",
+    "block.forbidden_arcanus.dark_runic_glass": "Verre runique sombre",
+    "block.forbidden_arcanus.arcane_golden_glass_pane": "Vitre dorée arcanique",
+    "block.forbidden_arcanus.runic_glass_pane": "Vitre dorée arcanique",
+    "block.forbidden_arcanus.dark_runic_glass_pane": "Vitre sombre runique",
+    "block.forbidden_arcanus.soulless_sand": "Sable du Nether sans âmes",
+    "block.forbidden_arcanus.soulless_sandstone": "Grés du Nether sans âmes",
+    "block.forbidden_arcanus.polished_soulless_sandstone": "Grés polie du Nether sans âmes",
+    "block.forbidden_arcanus.cut_soulless_sandstone": "Grés taillé du Nether sans âmes",
+    "block.forbidden_arcanus.soulless_sandstone_slab": "Dalle en grés du Nether sans âmes",
+    "block.forbidden_arcanus.cut_soulless_sandstone_slab": "Dalle en grés taillé du Nether sans âme",
+    "block.forbidden_arcanus.polished_soulless_sandstone_slab": "Dalle en grés polie du Nether sans âme",
+    "block.forbidden_arcanus.soulless_sandstone_stairs": "Escaliers en grés du Nether sans âme",
+    "block.forbidden_arcanus.polished_soulless_sandstone_stairs": "Escaliers en grés polie du Nether sans âme",
+    "block.forbidden_arcanus.soulless_sandstone_wall": "Muret en grés du Nether sans âme",
 
     "block.forbidden_arcanus.cherrywood_sapling": "Cherrywood Sapling",
     "block.forbidden_arcanus.mysterywood_sapling": "Mysterywood Sapling",
@@ -110,12 +110,12 @@
     "block.forbidden_arcanus.mysterywood_stairs": "Mysterywood Stairs",
     "block.forbidden_arcanus.edelwood_stairs": "Edelwood Stairs",
 
-    "block.forbidden_arcanus.arcane_gold_door": "Arcane Gold Door",
+    "block.forbidden_arcanus.arcane_gold_door": "Porte en or arcanique",
     "block.forbidden_arcanus.fungyss_door": "Fungyss Door",
     "block.forbidden_arcanus.cherrywood_door": "Cherrywood Door",
     "block.forbidden_arcanus.mysterywood_door": "Mysterywood Door",
     "block.forbidden_arcanus.edelwood_door": "Edelwood Door",
-    "block.forbidden_arcanus.arcane_gold_trapdoor": "Arcane Gold Trapdoor",
+    "block.forbidden_arcanus.arcane_gold_trapdoor": "Trappe en or arcanique",
     "block.forbidden_arcanus.fungyss_trapdoor": "Fungyss Trapdoor",
     "block.forbidden_arcanus.cherrywood_trapdoor": "Cherrywood Trapdoor",
     "block.forbidden_arcanus.mysterywood_trapdoor": "Mysterywood Trapdoor",
@@ -143,15 +143,15 @@
     "block.forbidden_arcanus.mysterywood_pressure_plate": "Mysterywood Pressure Plate",
     "block.forbidden_arcanus.edelwood_pressure_plate": "Edelwood Pressure Plate",
 
-    "block.forbidden_arcanus.arcane_dark_stone": "Arcane Dark Stone",
+    "block.forbidden_arcanus.arcane_dark_stone": "Pierre sombre arcanique",
     "block.forbidden_arcanus.arcane_crystal_obelisk": "Arcane Crystal Obelisk",
     "block.forbidden_arcanus.hephaestus_forge": "Hephaestus Forge",
     "block.forbidden_arcanus.petrified_root": "Petrified Root",
-    "block.forbidden_arcanus.arcane_dragon_egg": "Arcane Dragon Egg",
-    "block.forbidden_arcanus.yellow_orchid": "Yellow Orchid",
-    "block.forbidden_arcanus.golden_orchid": "Golden Orchid",
-    "block.forbidden_arcanus.magical_farmland": "Magical Farmland",
-    "block.forbidden_arcanus.black_hole": "Black Hole",
+    "block.forbidden_arcanus.arcane_dragon_egg": "Oeuf de dragon arcanique",
+    "block.forbidden_arcanus.yellow_orchid": "Orchidée jaune",
+    "block.forbidden_arcanus.golden_orchid": "Orchidée dorée",
+    "block.forbidden_arcanus.magical_farmland": "Terre magique labouré",
+    "block.forbidden_arcanus.black_hole": "Trou noir",
     "block.forbidden_arcanus.arcane_golden_chain": "Arcane Golden Chain",
 
     "block.forbidden_arcanus.obsidian_skull": "Obsidian Skull",
