--- a/src/main/resources/assets/forbidden_arcanus/lang/fr_fr.json
+++ b/src/main/resources/assets/forbidden_arcanus/lang/fr_fr.json
@@ -145,14 +145,14 @@
 
     "block.forbidden_arcanus.arcane_dark_stone": "Pierre sombre arcanique",
     "block.forbidden_arcanus.arcane_crystal_obelisk": "Arcane Crystal Obelisk",
-    "block.forbidden_arcanus.hephaestus_forge": "Hephaestus Forge",
+    "block.forbidden_arcanus.hephaestus_forge": "Forge d'Héphaïstos",
     "block.forbidden_arcanus.petrified_root": "Petrified Root",
     "block.forbidden_arcanus.arcane_dragon_egg": "Oeuf de dragon arcanique",
     "block.forbidden_arcanus.yellow_orchid": "Orchidée jaune",
     "block.forbidden_arcanus.golden_orchid": "Orchidée dorée",
-    "block.forbidden_arcanus.magical_farmland": "Terre magique labouré",
+    "block.forbidden_arcanus.magical_farmland": "Terre magique labourée",
     "block.forbidden_arcanus.black_hole": "Trou noir",
-    "block.forbidden_arcanus.arcane_golden_chain": "Arcane Golden Chain",
+    "block.forbidden_arcanus.arcane_golden_chain": "Chaine arcanique dorée",
 
     "block.forbidden_arcanus.obsidian_skull": "Obsidian Skull",
     "block.forbidden_arcanus.eternal_obsidian_skull": "Eternal Obsidian Skull",
@@ -168,22 +168,22 @@
     "item.forbidden_arcanus.arcane_gold_nugget": "Arcane Gold Nugget",
     "item.forbidden_arcanus.xpetrified_orb": "Xpetrified Orb",
     "item.forbidden_arcanus.eternal_stella": "Eternal Stella",
-    "item.forbidden_arcanus.orb_of_temporary_flight": "Orb Of Temporary Flight",
-    "item.forbidden_arcanus.spectral_eye_amulet": "Spectral Eye Amulet",
-    "item.forbidden_arcanus.soul": "Soul",
-    "item.forbidden_arcanus.dark_soul": "Dark Soul",
-    "item.forbidden_arcanus.pixie": "Pixie",
-    "item.forbidden_arcanus.corrupted_pixie": "Corrupted Pixie",
-    "item.forbidden_arcanus.arcane_crystal": "Arcane Crystal",
-    "item.forbidden_arcanus.arcane_crystal_dust": "Arcane Crystal Dust",
+    "item.forbidden_arcanus.orb_of_temporary_flight": "Orbe de vol temporaire",
+    "item.forbidden_arcanus.spectral_eye_amulet": "Amulette d'oeil spectral",
+    "item.forbidden_arcanus.soul": "Âme",
+    "item.forbidden_arcanus.dark_soul": "Âme sombre",
+    "item.forbidden_arcanus.pixie": "Fée",
+    "item.forbidden_arcanus.corrupted_pixie": "Fée corrompu",
+    "item.forbidden_arcanus.arcane_crystal": "Cristal arcanique",
+    "item.forbidden_arcanus.arcane_crystal_dust": "Poudre de cristal arcanique",
     "item.forbidden_arcanus.mundabitur_dust": "Mundabitur Dust",
     "item.forbidden_arcanus.corrupti_dust": "Corrupti Dust",
-    "item.forbidden_arcanus.dark_matter": "Dark Matter",
-    "item.forbidden_arcanus.ender_pearl_fragment": "Ender Pearl Fragment",
+    "item.forbidden_arcanus.dark_matter": "Matière noire",
+    "item.forbidden_arcanus.ender_pearl_fragment": "Fragment de perle de l'Ender",
     "item.forbidden_arcanus.rune": "Rune",
-    "item.forbidden_arcanus.dark_rune": "Dark Rune",
-    "item.forbidden_arcanus.rune_bag": "Rune Bag",
-    "item.forbidden_arcanus.dark_rune_bag": "Dark Rune Bag",
+    "item.forbidden_arcanus.dark_rune": "Rune sombre",
+    "item.forbidden_arcanus.rune_bag": "Sac de rune",
+    "item.forbidden_arcanus.dark_rune_bag": "Sac de rune sombre",
     "item.forbidden_arcanus.obsidian_with_iron": "Obsidian With Iron",
     "item.forbidden_arcanus.obsidian_ingot": "Obsidian Ingot",
     "item.forbidden_arcanus.dark_nether_star": "Dark Nether Star",
@@ -193,17 +193,17 @@
     "item.forbidden_arcanus.aquatic_dragon_scale": "Aquatic Dragon Scale",
     "item.forbidden_arcanus.rotten_leather": "Rotten Leather",
     "item.forbidden_arcanus.cherry_peach": "Cherry Peach",
-    "item.forbidden_arcanus.cloth": "Cloth",
-    "item.forbidden_arcanus.golden_feather": "Golden Feather",
-    "item.forbidden_arcanus.golden_orchid_seeds": "Golden Orchid Seeds",
+    "item.forbidden_arcanus.cloth": "Tissu",
+    "item.forbidden_arcanus.golden_feather": "Plume dorée",
+    "item.forbidden_arcanus.golden_orchid_seeds": "Graines d'orchidées dorées",
     "item.forbidden_arcanus.bat_wing": "Bat Wing",
     "item.forbidden_arcanus.bat_soup": "Bat Soup",
-    "item.forbidden_arcanus.tentacle": "Tentacle",
-    "item.forbidden_arcanus.cooked_tentacle": "Cooked Tentacle",
+    "item.forbidden_arcanus.tentacle": "Tentacule",
+    "item.forbidden_arcanus.cooked_tentacle": "Tentacule cuite",
     "item.forbidden_arcanus.strange_root": "Strange Root",
     "item.forbidden_arcanus.edelwood_stick": "Edelwood Stick",
     "item.forbidden_arcanus.edelwood_oil": "Edelwood Oil",
-    "item.forbidden_arcanus.wax": "Wax",
+    "item.forbidden_arcanus.wax": "Cire",
     "item.forbidden_arcanus.spawner_scrap": "Spawner Scrap",
     "item.forbidden_arcanus.quantum_catcher": "Quantum Catcher",
     "item.forbidden_arcanus.edelwood_bucket": "Edelwood Bucket",
@@ -322,16 +322,16 @@
     "modifier.forbidden_arcanus.fiery": "Fiery",
 
     "forbiddenmicon": "Forbiddenmicon",
-    "forbiddenmicon.category.main": "Main",
+    "forbiddenmicon.category.main": "Principal",
     "forbiddenmicon.category.items": "Items",
-    "forbiddenmicon.category.blocks": "Blocks",
-    "forbiddenmicon.recipe.crafting": "Crafting",
-    "forbiddenmicon.recipe.smelting": "Smelting",
-    "forbiddenmicon.recipe.cookingTime": "Cooking Time",
+    "forbiddenmicon.category.blocks": "Blocs",
+    "forbiddenmicon.recipe.crafting": "Fabrication",
+    "forbiddenmicon.recipe.smelting": "Fonte",
+    "forbiddenmicon.recipe.cookingTime": "Temps de cuisson",
     "forbiddenmicon.recipe.experience": "Experience",
-    "forbiddenmicon.recipe.smelting.furnace": "Furnace",
-    "forbiddenmicon.recipe.smelting.smoker": "Smoker",
-    "forbiddenmicon.recipe.smelting.blast_furnace": "Blast Furnace",
+    "forbiddenmicon.recipe.smelting.furnace": "Four",
+    "forbiddenmicon.recipe.smelting.smoker": "Fumoir",
+    "forbiddenmicon.recipe.smelting.blast_furnace": "Haut fourneau",
 
     "forbidden_arcanus.aureal": "Aureal",
     "forbidden_arcanus.corruption": "Corruption",
@@ -340,14 +340,14 @@
     "forbidden_arcanus.experience": "Experience",
 
     "guis_comment": "Guis",
-    "gui.forbidden_arcanus.hephaestus_forge.unlocked_at_level": "Unlocked at level",
+    "gui.forbidden_arcanus.hephaestus_forge.unlocked_at_level": "Débloqué par niveau",
 
-    "jei.forbidden_arcanus.category.hephaestusSmithing": "Hephaestus Smithing",
-    "jei.forbidden_arcanus.hephaestusSmithing.requiredPedestal": "Required pedestal",
+    "jei.forbidden_arcanus.category.hephaestusSmithing": "Forgeage d'Héphaïstos",
+    "jei.forbidden_arcanus.hephaestusSmithing.requiredPedestal": "Requiert un piédestal",
     "jei.forbidden_arcanus.hephaestusSmithing.requiredLevel": "Required forge level",
     "jei.forbidden_arcanus.hephaestusSmithing.requiredAureal": "Required aureal",
-    "jei.forbidden_arcanus.hephaestusSmithing.requiredSouls": "Required souls",
-    "jei.forbidden_arcanus.hephaestusSmithing.requiredBlood": "Required blood",
-    "jei.forbidden_arcanus.hephaestusSmithing.requiredExperience": "Required experience"
+    "jei.forbidden_arcanus.hephaestusSmithing.requiredSouls": "Requiert des ames",
+    "jei.forbidden_arcanus.hephaestusSmithing.requiredBlood": "Requiert du sang",
+    "jei.forbidden_arcanus.hephaestusSmithing.requiredExperience": "Requiert de l'experience"
 
 }
