--- a/src/main/resources/assets/forbidden_arcanus/lang/fr_fr.json
+++ b/src/main/resources/assets/forbidden_arcanus/lang/fr_fr.json
@@ -33,7 +33,7 @@
     "block.forbidden_arcanus.arcane_polished_darkstone_stairs": "Escaliers de Sombrepierre arcanique polie",
     "block.forbidden_arcanus.arcane_polished_darkstone_wall": "Muret de Sombrepierre polie",
     "block.forbidden_arcanus.chiseled_arcane_polished_darkstone": "Sombrepierre arcanique ciselé et polie",
-    "block.forbidden_arcanus.arcane_polished_darkstone_pillar": "Pillier en Sombrepierre arcanique ciselé et polie",
+    "block.forbidden_arcanus.arcane_polished_darkstone_pillar": "Pilier en Sombrepierre arcanique ciselé et polie",
     "block.forbidden_arcanus.arcane_polished_darkstone_rod": "Barre en Sombrepierre arcanique polie",
 
     "block.forbidden_arcanus.darkstone_pedestal": "Piédestal en Sombrepierre",
